Fix horizontal overflow 1

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 
 body {
     height: 100%;
-    width: 100%;
+    margin:0px;
     display: grid;
     grid-template-rows: [header] 1fr [content] 3fr;
     grid-template-columns: 1fr;
